LPS-74571 Fix management bar header z-index issue

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_management-bar.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/compat/components/_management-bar.scss
@@ -73,6 +73,7 @@
 
 .container-fluid-1280 .management-bar-header-right {
 	margin-right: 0;
+	position: relative;
 }
 
 .management-bar-header > .checkbox,
